force-app/main/default/objects/Statistical_Factor__c/Statistical_Factor__c.object-meta.xml
<CustomObject>
    <label>Statistical Factor</label>
    <nameField>
        <displayFormat>SF-{0000}</displayFormat>
        <label>Factor ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Statistical Factors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>