force-app/main/default/objects/Statistical_Factor__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Offense</fullName>
            </value>
            <value>
                <fullName>Defense</fullName>
            </value>
            <value>
                <fullName>Momentum</fullName>
            </value>
            <value>
                <fullName>Intangibles</fullName>
            </value>
            <value>
                <fullName>Historical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>