force-app/main/default/objects/Statistical_Factor__c/fields/Factor_Name__c.field-meta.xml
<CustomField>
    <fullName>Factor_Name__c</fullName>
    <label>Factor Name</label>
    <type>Text</type>
    <length>100</length>
    <required>true</required>
</CustomField>