force-app/main/default/objects/Statistical_Factor__c/fields/Factor_Value__c.field-meta.xml
<CustomField>
    <fullName>Factor_Value__c</fullName>
    <label>Factor Value</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>4</scale>
</CustomField>