force-app/main/default/objects/Statistical_Factor__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <label>Team</label>
    <type>MasterDetail</type>
    <referenceTo>Team__c</referenceTo>
    <relationshipLabel>Statistical Factors</relationshipLabel>
    <relationshipName>Statistical_Factors</relationshipName>
    <relationshipOrder>0</relationshipOrder>
</CustomField>