force-app/main/default/objects/Statistical_Factor__c/fields/Weight__c.field-meta.xml
<CustomField>
    <fullName>Weight__c</fullName>
    <label>Weight</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>